--- a/resources/languages/english.json
+++ b/resources/languages/english.json
@@ -3,7 +3,17 @@
         "serverOnMaintenance": "The server is undergoing maintenance, come back later!"
     },
     "updater": {
-        "checkingError": "Unable to check for updates, do you wish to continue?",
-        "updateAvailable": "Your client (v{current_version}) is outdated, a new update (v{latest_version}) is available. Do you still wish to continue?"
+        "errors": {
+            "check": "Unable to check for updates, do you wish to continue?",
+            "update": "Couldn't update application."
+        },
+        "dialog": {
+            "title": "A New Update is Available!",
+            "message": "Your client is outdated: v{current_version}\nA new update is available: v{latest_version}\n\nDo you wish to update?",
+            "options": {
+                "no": "No",
+                "yes": "Yes"
+            }
+        }
     }
 }
